# talks

2022-alkira-hashicorp-webinar/: README.md
2022-aws-community-day/: README.md
2023-aws-community-day/: README.md
2023-aws-summit-dc/: README.md
2023-naf-autocon0/: README.md
2023-onug-spring/: main.tf  provider.tf  variables.tf  versions.tf
2023-onug-spring/python/: delete_vpc.py
2023-software-architecture-summit/: README.md
2024-future-is-back/: README.md
2024-naf-autocon2/: README.md
2024-onug-fall/: README.md
2024-vanug-inaugural-keynote/: README.md
2025-ai-for-network-leaders/: README.md
2025-megaport-connect/: README.md
2025-naf-autocon4/: .gitignore  README.md  claude_desktop_config.example.json  ex01_basic_api.py  ex02_function_calling.py  ex03_openapi_tools.py  ex04_mcp_server.py  pyproject.toml
2025-naf-autocon4/nhl_stats/: __init__.py
aws-community-day-2022/: README.md
aws-community-day-2023/: README.md
aws-summit-dc-2023/: README.md
ctnug-winter-2023/: README.md
onug-spring-2023/: .gitignore  README.md  locals.tf
onug-spring-2023/python/: create_vpc.py
