[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhl-stats"
version = "1.0.0"
description = "NHL Player Stats demo for NAF AutoCon4 - Evolution from API to MCP"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"
